SONARJAVA-3885 Fix NPE in S1176 (UndocumentedApiCheck) when encountering Java 16's records